@@ -5,6 +5,7 @@ BETA PUBLIC RELEASE VERSION 0.2.6       ??-??-03
   * Made autoconf/automake configure setup more robust on Solaris 8 platforms
     (thanks to Ben Carrington!)
   * Fixed minor bugs in documentation formatting
+  * Made Vopot more robust
  
 #############################################################################
 BETA PUBLIC RELEASE VERSION 0.2.6       01-17-03
